Fix: Incluindo campos rrt contractType e ForemanName
